2008-12-19  Sam Steingold  <sds@gnu.org>

	* modules/berkeley-db/dbi.lisp (db-log-stat): fix type of mode slot

2008-12-19  Vladimir Tzankov  <vtzankov@gmail.com>

	* zthread.d (thread_cleanup): performs cleanup just before thread
	termination. currently releases (and warns) held mutexes
	(thread_stub): use it
	* spvw.d (mt_main_actions): call thread_cleanup() for the first thread
	* pathname.d (SAVEMEM): do not allow locked mutexes in memory image

2008-12-19  Vladimir Tzankov  <vtzankov@gmail.com>

	* pathname.d (SAVEMEM): signal an error if there are multiple
	running threads
	* spvw.d (single_running_threadp): returns true if the caller is the
	only running thread (used only by SAVEMEM)
	* spvw_memfile.d (loadmem_from_handle): recreate OS mutex and condition
	objects after memory image is loaded

2008-12-19  Vladimir Tzankov  <vtzankov@gmail.com>

	add lisp mutex to every package in threads builds
	* lispbibl.d (struct Package): add pack_mutex in threads builds
	* package.d (make_package): initialize pack_mutex

2008-12-18  Vladimir Tzankov  <vtzankov@gmail.com>

	fix possible memory corruption
	* lispbibl.d, spvw.d (clear_per_thread_symvalues): maygc. should
	acquire threads lock when clears the per thread bindings
	* symbol.d (%PROCLAIM-CONSTANT): preserve GC safety

2008-12-18  Vladimir Tzankov  <vtzankov@gmail.com>

	WITH-LOCK in C (WITH_OS_MUTEX_LOCK, WITH_LISP_MUTEX_LOCK)
	* lispbibl.d (WITH_OS_MUTEX_LOCK, WITH_LISP_MUTEX_LOCK): macros
	for executing statements with mutex lock held and with established
	UNWIND_PROTECT frame ensuring that mutex is unlocked at the end
	* package.d (RENAME-PACKAGE, LIST-ALL-PACKAGES, MAKE-PACKAGE)
	(%IN-PACKAGE, DELETE-PACKAGE, FIND-ALL-SYMBOLS, MAP-ALL-SYMBOLS): use
	WITH_OS_MUTEX_LOCK() with all_packages_lock
	(do_find_all_symbols): do not lock anything - callers hold the lock

2008-12-17  Vladimir Tzankov  <vtzankov@gmail.com>

	add mutex for O(all_packages) in threads builds
	* lispbibl.d (find_pacakge): may trigger GC